# codebox

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Makefile  NOTES.md  NOTICE  PRD.md  README.md  compose.yml  ruff.toml  ty.toml
codebox-agent/: README.md  pyproject.toml
codebox-agent/src/codebox_agent/: __init__.py  agent.py  agent_runner.py  config.py  events.py  llm.py  logging_config.py  message_store.py  opencode_go.py  prompts.py  sessions.py  streaming_backend.py
codebox-agent/src/codebox_agent/tools/: status.py  web.py
codebox-agent/tests/: test_agent_creation.py  test_config.py  test_opencode_go.py  test_tool_filtering.py
codebox-cli/: .env  .gitignore  README.md  pyproject.toml
codebox-cli/src/codebox_cli/: __init__.py  __main__.py  chat.py  cli.py  client.py  config.py  docker_manager.py  orchestrator_chat.py  orchestrator_client.py
codebox-core/: pyproject.toml
codebox-core/src/codebox_daemon/: __init__.py  __main__.py  agent.py  agent_runner.py  app.py  auth.py  callback.py  routes.py  schemas.py  sessions.py  tls.py  ws.py
codebox-core/src/codebox_daemon/tools/: status.py  web.py
codebox-github-action/: README.md  action.yml  pyproject.toml
codebox-github-action/src/codebox_github_action/: __init__.py  __main__.py  handler.py  prompts.py
codebox-orchestrator/: .env  .env.example  Dockerfile  README.md  alembic.ini  compose.yml  openapi.json  pyproject.toml
codebox-orchestrator/alembic/: env.py
codebox-orchestrator/alembic/versions/: 0001_initial_schema.py  0002_agent_templates.py  0003_rename_agent_templates_to_automations.py  0004_automation_trigger_repo_and_actions.py
codebox-orchestrator/scripts/: dump_openapi.py
codebox-orchestrator/src/codebox_orchestrator/: __main__.py  app.py  config.py  schemas.py
codebox-orchestrator/src/codebox_orchestrator/agent/domain/: entities.py  exceptions.py
codebox-orchestrator/src/codebox_orchestrator/agent/infrastructure/: callback_registry.py  callback_token.py  connection_adapter.py  event_repository.py  orm_models.py
codebox-orchestrator/src/codebox_orchestrator/agent/ports/: agent_connection.py
codebox-orchestrator/src/codebox_orchestrator/agent_template/: __init__.py  models.py  repository.py  schemas.py  service.py
codebox-orchestrator/src/codebox_orchestrator/agent_template/application/: __init__.py  allowed_fields.py  dry_run.py  matcher.py  scheduler.py
codebox-orchestrator/src/codebox_orchestrator/api/: app.py  dependencies.py  schemas.py
codebox-orchestrator/src/codebox_orchestrator/api/routes/: agent_templates.py  auth.py  automations.py  boxes.py  containers.py  github.py  llm_profiles.py  models.py  platform.py  project_settings.py  projects.py  pty.py  sse.py  tunnel.py  user_settings.py
codebox-orchestrator/src/codebox_orchestrator/auth/: dependencies.py  models.py  service.py
codebox-orchestrator/src/codebox_orchestrator/automation/: __init__.py  models.py  repository.py  schemas.py  service.py
codebox-orchestrator/src/codebox_orchestrator/automation/application/: __init__.py  allowed_fields.py  context.py  dry_run.py  matcher.py  renderer.py  scheduler.py
codebox-orchestrator/src/codebox_orchestrator/box/application/: name_generator.py
codebox-orchestrator/src/codebox_orchestrator/box/domain/: entities.py  enums.py  events.py  exceptions.py  views.py
codebox-orchestrator/src/codebox_orchestrator/box/infrastructure/: box_repository.py  box_state_store.py  event_publisher.py  mappers.py  orm_models.py
codebox-orchestrator/src/codebox_orchestrator/box/ports/: agent_connection.py  box_repository.py  container_runtime.py  event_publisher.py
codebox-orchestrator/src/codebox_orchestrator/compute/application/: __init__.py  commands.py
codebox-orchestrator/src/codebox_orchestrator/compute/docker/: docker_adapter.py  docker_service.py
codebox-orchestrator/src/codebox_orchestrator/compute/domain/: entities.py  exceptions.py
codebox-orchestrator/src/codebox_orchestrator/compute/ports/: container_runtime.py
codebox-orchestrator/src/codebox_orchestrator/db/: engine.py  migrations.py  models.py
codebox-orchestrator/src/codebox_orchestrator/grpc/: server.py
codebox-orchestrator/src/codebox_orchestrator/integration/ports/: integration_handler.py
codebox-orchestrator/src/codebox_orchestrator/llm_profile/: models.py  repository.py  service.py
codebox-orchestrator/src/codebox_orchestrator/platform/: __init__.py
codebox-orchestrator/src/codebox_orchestrator/platform/application/: orphan_scan.py
codebox-orchestrator/src/codebox_orchestrator/project/: dependencies.py  models.py  repository.py  service.py
codebox-orchestrator/src/codebox_orchestrator/project_settings/: models.py  repository.py  service.py
codebox-orchestrator/src/codebox_orchestrator/routes/: api.py  github.py  sse.py  ws_callback.py  ws_global.py  ws_relay.py
codebox-orchestrator/src/codebox_orchestrator/services/: box_service.py  callback_registry.py  callback_token.py  docker_service.py  github_service.py  global_broadcast_service.py  relay_service.py  sandbox_client.py  sandbox_service.py  task_service.py
codebox-orchestrator/src/codebox_orchestrator/shared/: crypto.py  urls.py
codebox-orchestrator/src/codebox_orchestrator/tunnel/: proxy.py  registry.py
codebox-orchestrator/src/codebox_orchestrator/user_settings/: models.py  repository.py  service.py
codebox-orchestrator/tests/: test_automation_service.py  test_context_builders_common.py  test_orphan_scan_service.py  test_pty_bridge.py  test_webhook_dispatcher_trigger.py
codebox-sandbox/: .dockerignore  Dockerfile  README.md  devbox.json  entrypoint.sh  pyproject.toml
codebox-sandbox/src/codebox_sandbox/: __init__.py  __main__.py  callback.py  file_server.py  prompts.py  pty_server.py
codebox-sandbox/src/codebox_sandbox/tunnel/: connector.py
codebox-sandbox/tests/: test_pty_server.py
codebox-tunnel/: pyproject.toml
codebox-tunnel/src/codebox_tunnel/: __init__.py  protocol.py  pty_frames.py  urls.py  ws_adapter.py  yamux.py
codebox-tunnel/tests/: test_pty_frames.py
(+424 files in other folders)
