[project]
name = "codebox-core"
version = "0.1.0"
description = "Codebox daemon — sandboxed coding agent with WebSocket API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "langchain-openrouter",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "cryptography",
    "python-dotenv",
]

[project.scripts]
codebox-daemon = "codebox_daemon.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebox_daemon"]
