[project]
name = "codebox-core"
version = "0.1.0"
description = "Codebox daemon — sandboxed coding agent with callback WebSocket"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "langchain-openrouter",
    "websockets",
    "python-dotenv",
    "tavily-python",
    "markdownify",
]

[project.scripts]
codebox-daemon = "codebox_daemon.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebox_daemon"]
