[project]
name = "codebox-github-action"
version = "0.1.0"
description = "GitHub Action runner for codebox agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codebox-agent",
]

[tool.uv]
package = true

[tool.uv.sources]
codebox-agent = { path = "../codebox-agent" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebox_github_action"]
