[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebox-orchestrator"
version = "0.1.0"
description = "Web-based orchestrator for Codebox sandbox agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "psycopg[binary]",
    "docker",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "protobuf>=4.25.0",
    "python-dotenv",
    "pydantic-settings>=2.5.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "truststore>=0.10.4",
    "python-multipart>=0.0.12",
    "codebox-tunnel",
]

[project.scripts]
codebox-orchestrator = "codebox_orchestrator.__main__:main"

[tool.uv.sources]
codebox-tunnel = { path = "../codebox-tunnel" }
