[project]
name = "codebox-sandbox"
version = "0.1.0"
description = "Container runner for codebox agent — gRPC callback to orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codebox-agent",
    "codebox-tunnel",
    "grpcio>=1.80.0",
    "protobuf>=4.25.0",
    "websockets>=14.0",
    "aiohttp>=3.9",
]

[project.scripts]
codebox-sandbox = "codebox_sandbox.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
codebox-agent = { path = "../codebox-agent" }
codebox-tunnel = { path = "../codebox-tunnel" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebox_sandbox"]
