[project]
name = "codebox-tunnel"
version = "0.1.0"
description = "Async yamux tunnel for codebox sandbox communication"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebox_tunnel"]
